[gd_scene load_steps=7 format=3 uid="uid://bk052m70xhxxn"]

[ext_resource type="Script" path="res://hint_status/Hint_status.gd" id="1_js5c5"]
[ext_resource type="Texture2D" uid="uid://do7wbt5grfkgk" path="res://res/bg_start.png" id="2_q2ged"]
[ext_resource type="Texture2D" uid="uid://erqphjujpk2t" path="res://res/100X50_green.png" id="3_iul6v"]
[ext_resource type="FontFile" uid="uid://cfku5f1y213fl" path="res://res/EvilEmpire-4BBVK.ttf" id="4_k3jii"]
[ext_resource type="Texture2D" uid="uid://dyxjwwgp4x58h" path="res://res/100X50_grey.png" id="5_eg2y2"]
[ext_resource type="Texture2D" uid="uid://47nqlnnnd0u8" path="res://res/100X50.png" id="6_0og72"]

[node name="hint_status" type="Node2D"]
script = ExtResource("1_js5c5")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(257.875, 414.987)
scale = Vector2(1.12781, 1.13613)
texture = ExtResource("2_q2ged")

[node name="Button_on" type="Button" parent="."]
offset_left = 95.0
offset_top = 256.0
offset_right = 203.0
offset_bottom = 314.0
icon = ExtResource("3_iul6v")

[node name="RichTextLabel" type="RichTextLabel" parent="Button_on"]
layout_mode = 0
offset_left = 30.0
offset_top = 11.0
offset_right = 80.0
offset_bottom = 56.0
theme_override_fonts/normal_font = ExtResource("4_k3jii")
theme_override_font_sizes/normal_font_size = 41
text = "on
"

[node name="Button_off" type="Button" parent="."]
offset_left = 318.0
offset_top = 257.0
offset_right = 426.0
offset_bottom = 315.0
icon = ExtResource("5_eg2y2")

[node name="RichTextLabel" type="RichTextLabel" parent="Button_off"]
layout_mode = 0
offset_left = 30.0
offset_top = 11.0
offset_right = 95.0
offset_bottom = 56.0
theme_override_fonts/normal_font = ExtResource("4_k3jii")
theme_override_font_sizes/normal_font_size = 41
text = "off
"

[node name="Button_back" type="Button" parent="."]
offset_left = 59.0
offset_top = 45.0
offset_right = 167.0
offset_bottom = 103.0
icon = ExtResource("6_0og72")

[node name="RichTextLabel" type="RichTextLabel" parent="Button_back"]
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 98.0
offset_bottom = 50.0
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_k3jii")
theme_override_font_sizes/normal_font_size = 26
text = "<- back"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 17.0
offset_top = 803.0
offset_right = 156.0
offset_bottom = 829.0
theme_override_colors/default_color = Color(0.141176, 0.215686, 0.388235, 1)
text = "Now:hint_status"

[connection signal="pressed" from="Button_back" to="." method="_on_button_back_pressed"]
